# Fractals

./: CMakeLists.txt
.cache/clangd/index/: KochSnowflake.cpp.206A503DE6614D3A.idx  KochSnowflake.h.F038BA8FF60094DA.idx  SierpinskiTriangle.cpp.BD519F77243927EE.idx  SierpinskiTriangle.h.CF76402E6D57CE6C.idx  VboIndex.h.478AB8CC0BC66E46.idx  _fixes.hpp.61C20C7183670B34.idx  _matrix_vectorize.hpp.735013CB73960A12.idx  _noise.hpp.347E07406C379048.idx  _vectorize.hpp.D31833C491976D85.idx  associated_min_max.hpp.5683C25434465C8B.idx  associated_min_max.inl.5833AAC5B55A5B7A.idx  bit.hpp.50FAAE82877ABE92.idx  bit.inl.29E9B7DFA8915ABA.idx  bitfield.hpp.2D8AE05F597398B2.idx  bitfield.inl.89EF913623C6B747.idx  closest_point.hpp.5FBA2655398D7A01.idx  closest_point.inl.7CC6025928AE29CA.idx  color_encoding.hpp.134A4937E9536A4C.idx  color_encoding.inl.DA35A79A80F1D7C7.idx  color_space.hpp.5B4EC404027D3752.idx  color_space.hpp.7BB1AF9256440DA4.idx  color_space.inl.14507E5272918B5B.idx  color_space.inl.6075EA8DB3BA5C7C.idx  color_space_YCoCg.hpp.5C52782A7A71F987.idx  (+460 more)
dependencies/glad/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
shader/: CMakeLists.txt  shader.frag  shader.vert
src/: CMakeLists.txt  main.cpp  todo
src/fractalScripts/: CMakeLists.txt  KochSnowflake.cpp  KochSnowflake.h  SierpinskiTriangle.cpp  SierpinskiTriangle.h  fractal.h  triangle.cpp
src/gui/: CMakeLists.txt  gui.cpp  gui.h
src/rendering/: CMakeLists.txt  VboIndex.h  computeShader.cpp  computeShader.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.cpp  vertex.h
(+3 files in other folders)
